# learning-lab

./: README.md
SDL3-TEST/: CMakeLists.txt  main.c  sdl3_test
SDL3-TEST/.cache/clangd/index/: main.c.EE40097B6C556CF7.idx
bootdev_js/chap1/: 1variables.js
bootdev_js/chap2/: 0comparisons.js
bootdev_js/chap3/: 0functions.js
bootdev_js/chap4/: objects.js
bootdev_js/chap5/: 0classes.js
c-lang/: 0hello-world.c  1apples  1apples.c  hello-world
ca-fullstack/00-test-repo/: README.md
ca-fullstack/01-HTML-CSS-GIT/week1-cli/: todo.txt
codecademy-fullstack-bootcamp/: README.md
codecademy-fullstack-bootcamp/01-HTML-CSS-GIT/week1-cli/: notes.txt
tut_hell/zenva_cpp/1_intro_to_cpp/: 12_comparison_operators.cpp  13_logical_operators.cpp  14_ternary_operator.cpp  15_control_flow_if_statements.cpp  16_control_flow_switch_statements.cpp  19_control_flow_control_statements.cpp  1_variables.cpp  20_functions.cpp  21_function_parameters.cpp  22_return_statements.cpp  23_string_functions.cpp  arithmetic_operators  booleans  comparison_operators  constants  control_flow_for_loops  control_flow_if_statements  control_flow_switch_statements  control_flow_while_loops  doubles  function_parameters  functions  integers  return_statements
tut_hell/zenva_cpp/2_data_structures/: 10_pointers_and_structs.cpp  11_enumerations.cpp  2_multidimensional_arrays.cpp  4_nested_structures.cpp  5_pointers.cpp  6_pointer_usage.cpp  8_pointers_and_arrays_p1.cpp  arrays  (+5 more)
zenva_cpp/intro_to_cpp/: 2_booleans.cpp  4_doubles.cpp  6_strings.cpp  8_user_input.cpp  chars  user_input  variables
(+76 files in other folders)
